--- a/resources/templates/_wrapper.html
+++ b/resources/templates/_wrapper.html
@@ -2,10 +2,24 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <link rel="apple-touch-icon" sizes="76x76" href="img/apple-icon.png">
+    <link rel="icon" type="image/png" href="img/favicon.png">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
     <meta name="description" content="{{ description|default:\"Edge - your own Clojure kick-start from JUXT\" }}">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
     <title>{{ title }}</title>
+
+    <!--     Fonts and icons     -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" />
+
+    <!-- CSS Files -->
+    <link href="css/bootstrap.min.css" rel="stylesheet" />
+    <!--<link href="css/material-kit.css" rel="stylesheet"/>-->
+
     <link rel="stylesheet" href="{% url static %}app.css"/>
   </head>
 
@@ -26,6 +40,21 @@
       <p>MIT License. Use however you like.</p>
     </footer>
 
-    <script src="{% absurl static %}edge.js" type="text/javascript"></script>
+    <!--   Core JS Files   -->
+    <script src="js/jquery.min.js" type="text/javascript"></script>
+    <script src="js/bootstrap.min.js" type="text/javascript"></script>
+    <script src="js/material.min.js"></script>
+
+    <!--  Plugin for the Sliders, full documentation here: http://refreshless.com/nouislider/ -->
+    <script src="js/nouislider.min.js" type="text/javascript"></script>
+
+    <!--  Plugin for the Datepicker, full documentation here: http://www.eyecon.ro/bootstrap-datepicker/ -->
+    <script src="js/bootstrap-datepicker.js" type="text/javascript"></script>
+
+    <!-- Control Center for Material Kit: activating the ripples, parallax effects, scripts from the example pages etc -->
+    <script src="js/material-kit.js" type="text/javascript"></script>
+
+    <script src="edge.js" type="text/javascript"></script>
   </body>
+
 </html>
