--- a/resources/templates/_wrapper.html
+++ b/resources/templates/_wrapper.html
@@ -6,22 +6,25 @@
     <link rel="icon" type="image/png" href="img/favicon.png">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <meta name="description" content="{{ description|default:\"Edge - your own Clojure kick-start from JUXT\" }}">
+    <meta name="description" content="{{ description|default:\"Cypress Analysis and Evaluation System\" }}">
 
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
     <title>{{ title }}</title>
 
     <!--     Fonts and icons     -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
-    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" />
+    <!--<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+        <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" /> -->
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/css/bootstrap.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="css/material-design-iconic-font.min.css" />
+    <link rel="stylesheet" href="css/re-com.css" />
 
     <!-- CSS Files -->
-    <link href="css/bootstrap.min.css" rel="stylesheet" />
+    <!-- <link href="css/bootstrap.min.css" rel="stylesheet" /> -->
     <!--<link href="css/Draft.css" rel="stylesheet" />-->
     <!--<link href="css/material-kit.css" rel="stylesheet"/>-->
 
-    <link rel="stylesheet" href="{% url static %}app.css"/>
+    <!--<link rel="stylesheet" href="{% url static %}app.css"/>-->
   </head>
 
   <body>
@@ -31,8 +34,9 @@
     {% endblock %}
 
     <!--   Core JS Files   -->
-    <script src="js/jquery.min.js" type="text/javascript"></script>
-    <script src="js/bootstrap.min.js" type="text/javascript"></script>
+    <!--<script src="js/jquery.min.js" type="text/javascript"></script>
+    <script src="js/bootstrap.min.js" type="text/javascript"></script>-->
+
     <!--<script src="js/material.min.js"></script>-->
 
     <!--  Plugin for the Sliders, full documentation here: http://refreshless.com/nouislider/ -->
