reorganized assets and css gen

--- a/resources/templates/_wrapper.html
+++ b/resources/templates/_wrapper.html
@@ -14,10 +14,17 @@
     <!--     Fonts and icons     -->
     <!--<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
         <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" /> -->
-    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/css/bootstrap.css" />
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" />
-    <link rel="stylesheet" href="public/assets/css/material-design-iconic-font.min.css" />
-    <link rel="stylesheet" href="public/assets/css/re-com.css" />
+    <!--<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/css/bootstrap.css" />
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" />-->
+
+    <link rel="stylesheet" href="assets/font-awesome/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css" />
+
+
+    <link rel="stylesheet" href="assets/material-design-iconic-font/dist/css/material-design-iconic-font.min.css" />
+    <link rel="stylesheet" href="re-com.css" />
+    <!--<link rel="stylesheet" href="public/assets/css/material-design-iconic-font.min.css" />
+        <link rel="stylesheet" href="public/assets/css/re-com.css" />-->
 
     <!-- CSS Files -->
     <!-- <link href="css/bootstrap.min.css" rel="stylesheet" /> -->
