removed stray - character

--- a/resources/templates/_wrapper.html
+++ b/resources/templates/_wrapper.html
@@ -31,7 +31,7 @@
     <!--<link href="css/Draft.css" rel="stylesheet" />-->
     <!--<link href="css/material-kit.css" rel="stylesheet"/>-->
 
-    -<link rel="stylesheet" href="{% url static %}app.css"/>
+    <link rel="stylesheet" href="{% url static %}app.css"/>
   </head>
 
   <body>
