--- a/resources/templates/_wrapper.html
+++ b/resources/templates/_wrapper.html
@@ -11,11 +11,11 @@
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
     <title>{{ title }}</title>
 
-    <link rel="stylesheet" href="assets/font-awesome/css/font-awesome.min.css" />
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="assets/font-awesome/css/font-awesome.min.css" />
     <link rel="stylesheet" href="assets/material-design-iconic-font/dist/css/material-design-iconic-font.min.css" />
     <link rel="stylesheet" href="re-com.css" />
-    <link rel="stylesheet" href="{% url static %}app.css"/>
+    <link rel="stylesheet" href="app.css"/>
   </head>
 
   <body>
@@ -23,7 +23,6 @@
     {% block main %}
     {% endblock %}
     {% endblock %}
-
     <script src="cypress_editor.js" type="text/javascript"></script>
   </body>
 
