--- a/sass/app.sass
+++ b/sass/app.sass
@@ -9,47 +9,86 @@
 =kwic-after()
   max-width: 300px
   min-width: 200px
+  text-align: left
   text-overflow: ellipsis
   padding-left: 2px
 
 =kwic-key()
-  text-align: center
   min-width: 6em
   max-width: 12em
+  text-align: center
+  padding-left: 2px
+  padding-right: 2px
+
+=hover-reveal()
+  text-overflow: clip
+  white-space: normal
+  word-break: break-all
+
+=flex-column()
+  max-width: 200px
   padding-left: 2px
   padding-right: 2px
 
 // Styles
 table.kwic
   thead tr
-    th:nth-child(1)
-      +kwic-before()
     th:nth-child(2)
+      +kwic-before()
+    th:nth-child(3)
       +kwic-key()
-    td:nth-child(3)
+    td:nth-child(4)
       +kwic-after()
+    td:nth-child(5)
+      +flex-column()
+    td:nth-child(6)
+      +flex-column()
+    td:nth-child(7)
+      +flex-column()
 
   tbody tr
-    td:nth-child(1)
+    td:nth-child(2)
       +kwic-before()
       white-space: nowrap
       overflow: hidden
       direction: rtl
-    td:nth-child(1):hover
+    td:nth-child(2):hover
       +kwic-before()
-      text-overflow: clip
-      white-space: normal
-      word-break: break-all
+      +hover-reveal()
       text-align: left
-    td:nth-child(2)
+
+    td:nth-child(3)
       +kwic-key()
       background: lighten(grey, 45%)
-    td:nth-child(3)
+
+    td:nth-child(4)
       +kwic-after()
       white-space: nowrap
       overflow: hidden
-    td:nth-child(3):hover
+    td:nth-child(4):hover
       +kwic-after()
-      text-overflow: clip
-      white-space: normal
-      word-break: break-all
+      +hover-reveal()
+
+    td:nth-child(5)
+      +flex-column()
+      white-space: nowrap
+      overflow: hidden
+    td:nth-child(5):hover
+      +flex-column()
+      +hover-reveal()
+
+    td:nth-child(6)
+      +flex-column()
+      white-space: nowrap
+      overflow: hidden
+    td:nth-child(6):hover
+      +flex-column()
+      +hover-reveal()
+
+    td:nth-child(7)
+      +flex-column()
+      white-space: nowrap
+      overflow: hidden
+    td:nth-child(7):hover
+      +flex-column()
+      +hover-reveal()
