prevented rtl from doing transformations on text

--- a/sass/app.sass
+++ b/sass/app.sass
@@ -52,6 +52,7 @@ table.kwic
       white-space: nowrap
       overflow: hidden
       direction: rtl
+      unicode-bidi: plaintext
     td:nth-child(2):hover
       +kwic-before()
       +hover-reveal()
