added new styles

--- a/sass/app.sass
+++ b/sass/app.sass
@@ -93,3 +93,14 @@ table.kwic
     td:nth-child(7):hover
       +flex-column()
       +hover-reveal()
+
+.is-centered
+  justify-content: center
+
+.is-padded
+  padding-top: 24px
+  padding-bottom: 24px
+
+a.nav-item.is-danger.is-active
+  color: hsl(348, 100%, 61%)
+  border-bottom: 3px solid hsl(348, 100%, 61%)
