--- a/sass/app.sass
+++ b/sass/app.sass
@@ -104,3 +104,6 @@ table.kwic
 a.nav-item.is-danger.is-active
   color: hsl(348, 100%, 61%)
   border-bottom: 3px solid hsl(348, 100%, 61%)
+
+.flex-grow
+  flex-grow: 1
