added sorting support to :before column
A bit of a hack, but works...

--- a/sass/app.sass
+++ b/sass/app.sass
@@ -94,6 +94,13 @@ table.kwic
       +flex-column()
       +hover-reveal()
 
+th.sorted-by.desc:before
+  font-family: FontAwesome
+  content: "\f0dd  "
+th.sorted-by.asc:before
+  font-family: FontAwesome
+  content: "\f0de  "
+
 .is-centered
   justify-content: center
 
