added more flexible table column sizing with vw

--- a/sass/app.sass
+++ b/sass/app.sass
@@ -1,14 +1,14 @@
 // Mixins
 =kwic-before()
-  max-width: 300px
-  min-width: 200px
+  max-width: 30vw //300px
+  min-width: 20vw //200px
   text-align: right
   text-overflow: ellipsis
   padding-right: 2px
 
 =kwic-after()
-  max-width: 300px
-  min-width: 200px
+  max-width: 30vw //300px
+  min-width: 20vw //200px
   text-align: left
   text-overflow: ellipsis
   padding-left: 2px
@@ -26,9 +26,9 @@
   word-break: break-all
 
 =flex-column()
-  max-width: 200px
-  padding-left: 2px
-  padding-right: 2px
+  max-width: 12vw //200px
+  padding-left: 4px
+  padding-right: 4px
 
 // Styles
 table.kwic
