--- a/sass/app.sass
+++ b/sass/app.sass
@@ -1,14 +1,14 @@
 // Mixins
 =kwic-before()
   max-width: 30vw //300px
-  min-width: 20vw //200px
+  min-width: 15vw //200px
   text-align: right
   text-overflow: ellipsis
   padding-right: 2px
 
 =kwic-after()
   max-width: 30vw //300px
-  min-width: 20vw //200px
+  min-width: 15vw //200px
   text-align: left
   text-overflow: ellipsis
   padding-left: 2px
@@ -26,7 +26,8 @@
   word-break: break-all
 
 =flex-column()
-  max-width: 12vw //200px
+  min-width: 5vw
+  max-width: 10vw //200px
   padding-left: 4px
   padding-right: 4px
 
